fixed mobile portrait not showing

--- a/css/main.css
+++ b/css/main.css
@@ -346,8 +346,7 @@ main#home h1 {
     transform: translate3d(100%, 0, 0);
   }
   .menu-branding .portrait {
-    background: url("/dist/img/tony.png");
-    background-size: contain;
+    background-size: cover;
     width: 150px;
     height: 150px;
   }
